src/miw/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones : declaracionesFuncion
   3               | declaraciones declaracionesFuncion

   4  declaraciones : declaraciones declaracion ';'
   5                | declaracion ';'

   6  declaracion : tipo identificadores

   7  tipo : INT
   8       | DOUBLE
   9       | CHAR
  10       | tipo '[' CTE_ENTERA ']'

  11  identificador : IDENTIFICADOR

  12  identificadores : identificador
  13                  | identificadores ',' identificador

  14  sentencias : sentencia
  15             | sentencias sentencia

  16  sentencia : read ';'
  17            | write ';'
  18            | asignacion ';'
  19            | return ';'
  20            | while
  21            | if
  22            | funcion ';'

  23  if : if_sentencia
  24     | if_sentencias

  25  if_sentencia : IF '(' expresion ')' sentencia
  26               | IF '(' expresion ')' sentencia else

  27  if_sentencias : IF '(' expresion ')' bloque
  28                | IF '(' expresion ')' bloque else

  29  else : ELSE sentencia
  30       | ELSE bloque

  31  bloque : '{' '}'
  32         | '{' sentencias '}'

  33  asignacion : expresion '=' expresion

  34  read : READ expresiones

  35  write : WRITE expresiones

  36  return : RETURN expresion

  37  while : WHILE '(' expresion ')' bloque

  38  funcion : identificador '(' ')'
  39          | identificador '(' expresiones ')'

  40  parametros : parametros ',' parametro
  41             | parametro

  42  parametro : tipo identificador

  43  nombreFuncion : identificador
  44                | MAIN

  45  declaracionFuncion : VOID nombreFuncion '(' ')' '{' declaraciones sentencias '}'
  46                     | VOID nombreFuncion '(' ')' '{' sentencias '}'
  47                     | VOID nombreFuncion '(' parametros ')' '{' declaraciones sentencias '}'
  48                     | VOID nombreFuncion '(' parametros ')' '{' sentencias '}'
  49                     | tipo nombreFuncion '(' ')' '{' declaraciones sentencias '}'
  50                     | tipo nombreFuncion '(' ')' '{' sentencias '}'
  51                     | tipo nombreFuncion '(' parametros ')' '{' declaraciones sentencias '}'
  52                     | tipo nombreFuncion '(' parametros ')' '{' sentencias '}'

  53  declaracionesFuncion : declaracionFuncion
  54                       | declaracionesFuncion declaracionFuncion

  55  expresiones : expresion
  56              | expresiones ',' expresion

  57  expresion : expresion '+' expresion
  58            | expresion '-' expresion
  59            | expresion '*' expresion
  60            | expresion '/' expresion
  61            | expresion '%' expresion
  62            | expresion AND expresion
  63            | expresion OR expresion
  64            | '!' expresion
  65            | expresion IGUAL expresion
  66            | expresion DISTINTO expresion
  67            | expresion MENOR_IGUAL expresion
  68            | expresion MAYOR_IGUAL expresion
  69            | '-' expresion
  70            | '(' tipo ')' expresion
  71            | expresion '[' expresion ']'
  72            | '(' expresion ')'
  73            | CTE_ENTERA
  74            | CTE_DOBLE
  75            | CTE_CARACTER
  76            | identificador
  77            | funcion

state 0
	$accept : . programa $end  (0)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	VOID  shift 4
	.  error

	programa  goto 5
	definiciones  goto 6
	declaracionesFuncion  goto 7
	declaraciones  goto 8
	declaracion  goto 9
	tipo  goto 10
	declaracionFuncion  goto 11


state 1
	tipo : INT .  (7)

	.  reduce 7


state 2
	tipo : DOUBLE .  (8)

	.  reduce 8


state 3
	tipo : CHAR .  (9)

	.  reduce 9


state 4
	declaracionFuncion : VOID . nombreFuncion '(' ')' '{' declaraciones sentencias '}'  (45)
	declaracionFuncion : VOID . nombreFuncion '(' ')' '{' sentencias '}'  (46)
	declaracionFuncion : VOID . nombreFuncion '(' parametros ')' '{' declaraciones sentencias '}'  (47)
	declaracionFuncion : VOID . nombreFuncion '(' parametros ')' '{' sentencias '}'  (48)

	IDENTIFICADOR  shift 12
	MAIN  shift 13
	.  error

	identificador  goto 14
	nombreFuncion  goto 15


state 5
	$accept : programa . $end  (0)

	$end  accept


state 6
	programa : definiciones .  (1)

	.  reduce 1


state 7
	definiciones : declaracionesFuncion .  (2)
	declaracionesFuncion : declaracionesFuncion . declaracionFuncion  (54)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	VOID  shift 4
	$end  reduce 2

	tipo  goto 16
	declaracionFuncion  goto 17


state 8
	definiciones : declaraciones . declaracionesFuncion  (3)
	declaraciones : declaraciones . declaracion ';'  (4)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	VOID  shift 4
	.  error

	declaracionesFuncion  goto 18
	declaracion  goto 19
	tipo  goto 10
	declaracionFuncion  goto 11


state 9
	declaraciones : declaracion . ';'  (5)

	';'  shift 20
	.  error


state 10
	declaracion : tipo . identificadores  (6)
	tipo : tipo . '[' CTE_ENTERA ']'  (10)
	declaracionFuncion : tipo . nombreFuncion '(' ')' '{' declaraciones sentencias '}'  (49)
	declaracionFuncion : tipo . nombreFuncion '(' ')' '{' sentencias '}'  (50)
	declaracionFuncion : tipo . nombreFuncion '(' parametros ')' '{' declaraciones sentencias '}'  (51)
	declaracionFuncion : tipo . nombreFuncion '(' parametros ')' '{' sentencias '}'  (52)

	IDENTIFICADOR  shift 12
	MAIN  shift 13
	'['  shift 21
	.  error

	identificadores  goto 22
	identificador  goto 23
	nombreFuncion  goto 24


state 11
	declaracionesFuncion : declaracionFuncion .  (53)

	.  reduce 53


state 12
	identificador : IDENTIFICADOR .  (11)

	.  reduce 11


state 13
	nombreFuncion : MAIN .  (44)

	.  reduce 44


state 14
	nombreFuncion : identificador .  (43)

	.  reduce 43


state 15
	declaracionFuncion : VOID nombreFuncion . '(' ')' '{' declaraciones sentencias '}'  (45)
	declaracionFuncion : VOID nombreFuncion . '(' ')' '{' sentencias '}'  (46)
	declaracionFuncion : VOID nombreFuncion . '(' parametros ')' '{' declaraciones sentencias '}'  (47)
	declaracionFuncion : VOID nombreFuncion . '(' parametros ')' '{' sentencias '}'  (48)

	'('  shift 25
	.  error


state 16
	tipo : tipo . '[' CTE_ENTERA ']'  (10)
	declaracionFuncion : tipo . nombreFuncion '(' ')' '{' declaraciones sentencias '}'  (49)
	declaracionFuncion : tipo . nombreFuncion '(' ')' '{' sentencias '}'  (50)
	declaracionFuncion : tipo . nombreFuncion '(' parametros ')' '{' declaraciones sentencias '}'  (51)
	declaracionFuncion : tipo . nombreFuncion '(' parametros ')' '{' sentencias '}'  (52)

	IDENTIFICADOR  shift 12
	MAIN  shift 13
	'['  shift 21
	.  error

	identificador  goto 14
	nombreFuncion  goto 24


state 17
	declaracionesFuncion : declaracionesFuncion declaracionFuncion .  (54)

	.  reduce 54


state 18
	definiciones : declaraciones declaracionesFuncion .  (3)
	declaracionesFuncion : declaracionesFuncion . declaracionFuncion  (54)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	VOID  shift 4
	$end  reduce 3

	tipo  goto 16
	declaracionFuncion  goto 17


state 19
	declaraciones : declaraciones declaracion . ';'  (4)

	';'  shift 26
	.  error


state 20
	declaraciones : declaracion ';' .  (5)

	.  reduce 5


state 21
	tipo : tipo '[' . CTE_ENTERA ']'  (10)

	CTE_ENTERA  shift 27
	.  error


state 22
	declaracion : tipo identificadores .  (6)
	identificadores : identificadores . ',' identificador  (13)

	','  shift 28
	';'  reduce 6


state 23
	identificadores : identificador .  (12)
	nombreFuncion : identificador .  (43)

	'('  reduce 43
	';'  reduce 12
	','  reduce 12


state 24
	declaracionFuncion : tipo nombreFuncion . '(' ')' '{' declaraciones sentencias '}'  (49)
	declaracionFuncion : tipo nombreFuncion . '(' ')' '{' sentencias '}'  (50)
	declaracionFuncion : tipo nombreFuncion . '(' parametros ')' '{' declaraciones sentencias '}'  (51)
	declaracionFuncion : tipo nombreFuncion . '(' parametros ')' '{' sentencias '}'  (52)

	'('  shift 29
	.  error


state 25
	declaracionFuncion : VOID nombreFuncion '(' . ')' '{' declaraciones sentencias '}'  (45)
	declaracionFuncion : VOID nombreFuncion '(' . ')' '{' sentencias '}'  (46)
	declaracionFuncion : VOID nombreFuncion '(' . parametros ')' '{' declaraciones sentencias '}'  (47)
	declaracionFuncion : VOID nombreFuncion '(' . parametros ')' '{' sentencias '}'  (48)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	')'  shift 30
	.  error

	tipo  goto 31
	parametros  goto 32
	parametro  goto 33


state 26
	declaraciones : declaraciones declaracion ';' .  (4)

	.  reduce 4


state 27
	tipo : tipo '[' CTE_ENTERA . ']'  (10)

	']'  shift 34
	.  error


state 28
	identificadores : identificadores ',' . identificador  (13)

	IDENTIFICADOR  shift 12
	.  error

	identificador  goto 35


state 29
	declaracionFuncion : tipo nombreFuncion '(' . ')' '{' declaraciones sentencias '}'  (49)
	declaracionFuncion : tipo nombreFuncion '(' . ')' '{' sentencias '}'  (50)
	declaracionFuncion : tipo nombreFuncion '(' . parametros ')' '{' declaraciones sentencias '}'  (51)
	declaracionFuncion : tipo nombreFuncion '(' . parametros ')' '{' sentencias '}'  (52)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	')'  shift 36
	.  error

	tipo  goto 31
	parametros  goto 37
	parametro  goto 33


state 30
	declaracionFuncion : VOID nombreFuncion '(' ')' . '{' declaraciones sentencias '}'  (45)
	declaracionFuncion : VOID nombreFuncion '(' ')' . '{' sentencias '}'  (46)

	'{'  shift 38
	.  error


state 31
	tipo : tipo . '[' CTE_ENTERA ']'  (10)
	parametro : tipo . identificador  (42)

	IDENTIFICADOR  shift 12
	'['  shift 21
	.  error

	identificador  goto 39


state 32
	parametros : parametros . ',' parametro  (40)
	declaracionFuncion : VOID nombreFuncion '(' parametros . ')' '{' declaraciones sentencias '}'  (47)
	declaracionFuncion : VOID nombreFuncion '(' parametros . ')' '{' sentencias '}'  (48)

	')'  shift 40
	','  shift 41
	.  error


state 33
	parametros : parametro .  (41)

	.  reduce 41


state 34
	tipo : tipo '[' CTE_ENTERA ']' .  (10)

	.  reduce 10


state 35
	identificadores : identificadores ',' identificador .  (13)

	.  reduce 13


state 36
	declaracionFuncion : tipo nombreFuncion '(' ')' . '{' declaraciones sentencias '}'  (49)
	declaracionFuncion : tipo nombreFuncion '(' ')' . '{' sentencias '}'  (50)

	'{'  shift 42
	.  error


state 37
	parametros : parametros . ',' parametro  (40)
	declaracionFuncion : tipo nombreFuncion '(' parametros . ')' '{' declaraciones sentencias '}'  (51)
	declaracionFuncion : tipo nombreFuncion '(' parametros . ')' '{' sentencias '}'  (52)

	')'  shift 43
	','  shift 41
	.  error


state 38
	declaracionFuncion : VOID nombreFuncion '(' ')' '{' . declaraciones sentencias '}'  (45)
	declaracionFuncion : VOID nombreFuncion '(' ')' '{' . sentencias '}'  (46)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	declaraciones  goto 55
	declaracion  goto 9
	tipo  goto 56
	identificador  goto 57
	sentencias  goto 58
	sentencia  goto 59
	read  goto 60
	write  goto 61
	asignacion  goto 62
	return  goto 63
	while  goto 64
	if  goto 65
	funcion  goto 66
	if_sentencia  goto 67
	if_sentencias  goto 68
	expresion  goto 69


state 39
	parametro : tipo identificador .  (42)

	.  reduce 42


state 40
	declaracionFuncion : VOID nombreFuncion '(' parametros ')' . '{' declaraciones sentencias '}'  (47)
	declaracionFuncion : VOID nombreFuncion '(' parametros ')' . '{' sentencias '}'  (48)

	'{'  shift 70
	.  error


state 41
	parametros : parametros ',' . parametro  (40)

	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	.  error

	tipo  goto 31
	parametro  goto 71


state 42
	declaracionFuncion : tipo nombreFuncion '(' ')' '{' . declaraciones sentencias '}'  (49)
	declaracionFuncion : tipo nombreFuncion '(' ')' '{' . sentencias '}'  (50)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	declaraciones  goto 72
	declaracion  goto 9
	tipo  goto 56
	identificador  goto 57
	sentencias  goto 73
	sentencia  goto 59
	read  goto 60
	write  goto 61
	asignacion  goto 62
	return  goto 63
	while  goto 64
	if  goto 65
	funcion  goto 66
	if_sentencia  goto 67
	if_sentencias  goto 68
	expresion  goto 69


state 43
	declaracionFuncion : tipo nombreFuncion '(' parametros ')' . '{' declaraciones sentencias '}'  (51)
	declaracionFuncion : tipo nombreFuncion '(' parametros ')' . '{' sentencias '}'  (52)

	'{'  shift 74
	.  error


state 44
	expresion : CTE_ENTERA .  (73)

	.  reduce 73


state 45
	expresion : CTE_CARACTER .  (75)

	.  reduce 75


state 46
	expresion : CTE_DOBLE .  (74)

	.  reduce 74


state 47
	if_sentencia : IF . '(' expresion ')' sentencia  (25)
	if_sentencia : IF . '(' expresion ')' sentencia else  (26)
	if_sentencias : IF . '(' expresion ')' bloque  (27)
	if_sentencias : IF . '(' expresion ')' bloque else  (28)

	'('  shift 75
	.  error


state 48
	while : WHILE . '(' expresion ')' bloque  (37)

	'('  shift 76
	.  error


state 49
	write : WRITE . expresiones  (35)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	identificador  goto 57
	funcion  goto 77
	expresion  goto 78
	expresiones  goto 79


state 50
	read : READ . expresiones  (34)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	identificador  goto 57
	funcion  goto 77
	expresion  goto 78
	expresiones  goto 80


state 51
	return : RETURN . expresion  (36)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	identificador  goto 57
	funcion  goto 77
	expresion  goto 81


state 52
	expresion : '!' . expresion  (64)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	identificador  goto 57
	funcion  goto 77
	expresion  goto 82


state 53
	expresion : '-' . expresion  (69)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	identificador  goto 57
	funcion  goto 77
	expresion  goto 83


state 54
	expresion : '(' . tipo ')' expresion  (70)
	expresion : '(' . expresion ')'  (72)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	tipo  goto 84
	identificador  goto 57
	funcion  goto 77
	expresion  goto 85


state 55
	declaraciones : declaraciones . declaracion ';'  (4)
	declaracionFuncion : VOID nombreFuncion '(' ')' '{' declaraciones . sentencias '}'  (45)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	declaracion  goto 19
	tipo  goto 56
	identificador  goto 57
	sentencias  goto 86
	sentencia  goto 59
	read  goto 60
	write  goto 61
	asignacion  goto 62
	return  goto 63
	while  goto 64
	if  goto 65
	funcion  goto 66
	if_sentencia  goto 67
	if_sentencias  goto 68
	expresion  goto 69


state 56
	declaracion : tipo . identificadores  (6)
	tipo : tipo . '[' CTE_ENTERA ']'  (10)

	IDENTIFICADOR  shift 12
	'['  shift 21
	.  error

	identificadores  goto 22
	identificador  goto 87


state 57
	funcion : identificador . '(' ')'  (38)
	funcion : identificador . '(' expresiones ')'  (39)
	expresion : identificador .  (76)

	'('  shift 88
	IGUAL  reduce 76
	DISTINTO  reduce 76
	MAYOR_IGUAL  reduce 76
	MENOR_IGUAL  reduce 76
	OR  reduce 76
	AND  reduce 76
	'='  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'%'  reduce 76
	'['  reduce 76
	']'  reduce 76
	')'  reduce 76
	';'  reduce 76
	','  reduce 76


state 58
	sentencias : sentencias . sentencia  (15)
	declaracionFuncion : VOID nombreFuncion '(' ')' '{' sentencias . '}'  (46)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	'}'  shift 89
	.  error

	identificador  goto 57
	sentencia  goto 90
	read  goto 60
	write  goto 61
	asignacion  goto 62
	return  goto 63
	while  goto 64
	if  goto 65
	funcion  goto 66
	if_sentencia  goto 67
	if_sentencias  goto 68
	expresion  goto 69


state 59
	sentencias : sentencia .  (14)

	.  reduce 14


state 60
	sentencia : read . ';'  (16)

	';'  shift 91
	.  error


state 61
	sentencia : write . ';'  (17)

	';'  shift 92
	.  error


state 62
	sentencia : asignacion . ';'  (18)

	';'  shift 93
	.  error


state 63
	sentencia : return . ';'  (19)

	';'  shift 94
	.  error


state 64
	sentencia : while .  (20)

	.  reduce 20


state 65
	sentencia : if .  (21)

	.  reduce 21


state 66
	sentencia : funcion . ';'  (22)
	expresion : funcion .  (77)

	';'  shift 95
	IGUAL  reduce 77
	DISTINTO  reduce 77
	MAYOR_IGUAL  reduce 77
	MENOR_IGUAL  reduce 77
	OR  reduce 77
	AND  reduce 77
	'='  reduce 77
	'+'  reduce 77
	'-'  reduce 77
	'*'  reduce 77
	'/'  reduce 77
	'%'  reduce 77
	'['  reduce 77


state 67
	if : if_sentencia .  (23)

	.  reduce 23


state 68
	if : if_sentencias .  (24)

	.  reduce 24


state 69
	asignacion : expresion . '=' expresion  (33)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . '*' expresion  (59)
	expresion : expresion . '/' expresion  (60)
	expresion : expresion . '%' expresion  (61)
	expresion : expresion . AND expresion  (62)
	expresion : expresion . OR expresion  (63)
	expresion : expresion . IGUAL expresion  (65)
	expresion : expresion . DISTINTO expresion  (66)
	expresion : expresion . MENOR_IGUAL expresion  (67)
	expresion : expresion . MAYOR_IGUAL expresion  (68)
	expresion : expresion . '[' expresion ']'  (71)

	IGUAL  shift 96
	DISTINTO  shift 97
	MAYOR_IGUAL  shift 98
	MENOR_IGUAL  shift 99
	OR  shift 100
	AND  shift 101
	'='  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	.  error


state 70
	declaracionFuncion : VOID nombreFuncion '(' parametros ')' '{' . declaraciones sentencias '}'  (47)
	declaracionFuncion : VOID nombreFuncion '(' parametros ')' '{' . sentencias '}'  (48)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	declaraciones  goto 109
	declaracion  goto 9
	tipo  goto 56
	identificador  goto 57
	sentencias  goto 110
	sentencia  goto 59
	read  goto 60
	write  goto 61
	asignacion  goto 62
	return  goto 63
	while  goto 64
	if  goto 65
	funcion  goto 66
	if_sentencia  goto 67
	if_sentencias  goto 68
	expresion  goto 69


state 71
	parametros : parametros ',' parametro .  (40)

	.  reduce 40


state 72
	declaraciones : declaraciones . declaracion ';'  (4)
	declaracionFuncion : tipo nombreFuncion '(' ')' '{' declaraciones . sentencias '}'  (49)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	declaracion  goto 19
	tipo  goto 56
	identificador  goto 57
	sentencias  goto 111
	sentencia  goto 59
	read  goto 60
	write  goto 61
	asignacion  goto 62
	return  goto 63
	while  goto 64
	if  goto 65
	funcion  goto 66
	if_sentencia  goto 67
	if_sentencias  goto 68
	expresion  goto 69


state 73
	sentencias : sentencias . sentencia  (15)
	declaracionFuncion : tipo nombreFuncion '(' ')' '{' sentencias . '}'  (50)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	'}'  shift 112
	.  error

	identificador  goto 57
	sentencia  goto 90
	read  goto 60
	write  goto 61
	asignacion  goto 62
	return  goto 63
	while  goto 64
	if  goto 65
	funcion  goto 66
	if_sentencia  goto 67
	if_sentencias  goto 68
	expresion  goto 69


state 74
	declaracionFuncion : tipo nombreFuncion '(' parametros ')' '{' . declaraciones sentencias '}'  (51)
	declaracionFuncion : tipo nombreFuncion '(' parametros ')' '{' . sentencias '}'  (52)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	INT  shift 1
	DOUBLE  shift 2
	CHAR  shift 3
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	declaraciones  goto 113
	declaracion  goto 9
	tipo  goto 56
	identificador  goto 57
	sentencias  goto 114
	sentencia  goto 59
	read  goto 60
	write  goto 61
	asignacion  goto 62
	return  goto 63
	while  goto 64
	if  goto 65
	funcion  goto 66
	if_sentencia  goto 67
	if_sentencias  goto 68
	expresion  goto 69


state 75
	if_sentencia : IF '(' . expresion ')' sentencia  (25)
	if_sentencia : IF '(' . expresion ')' sentencia else  (26)
	if_sentencias : IF '(' . expresion ')' bloque  (27)
	if_sentencias : IF '(' . expresion ')' bloque else  (28)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	identificador  goto 57
	funcion  goto 77
	expresion  goto 115


state 76
	while : WHILE '(' . expresion ')' bloque  (37)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	.  error

	identificador  goto 57
	funcion  goto 77
	expresion  goto 116


state 77
	expresion : funcion .  (77)

	.  reduce 77


state 78
	expresiones : expresion .  (55)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . '*' expresion  (59)
	expresion : expresion . '/' expresion  (60)
	expresion : expresion . '%' expresion  (61)
	expresion : expresion . AND expresion  (62)
	expresion : expresion . OR expresion  (63)
	expresion : expresion . IGUAL expresion  (65)
	expresion : expresion . DISTINTO expresion  (66)
	expresion : expresion . MENOR_IGUAL expresion  (67)
	expresion : expresion . MAYOR_IGUAL expresion  (68)
	expresion : expresion . '[' expresion ']'  (71)

	IGUAL  shift 96
	DISTINTO  shift 97
	MAYOR_IGUAL  shift 98
	MENOR_IGUAL  shift 99
	OR  shift 100
	AND  shift 101
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	')'  reduce 55
	';'  reduce 55
	','  reduce 55


state 79
	write : WRITE expresiones .  (35)
	expresiones : expresiones . ',' expresion  (56)

	','  shift 117
	';'  reduce 35


state 80
	read : READ expresiones .  (34)
	expresiones : expresiones . ',' expresion  (56)

	','  shift 117
	';'  reduce 34


state 81
	return : RETURN expresion .  (36)
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . '*' expresion  (59)
	expresion : expresion . '/' expresion  (60)
	expresion : expresion . '%' expresion  (61)
	expresion : expresion . AND expresion  (62)
	expresion : expresion . OR expresion  (63)
	expresion : expresion . IGUAL expresion  (65)
	expresion : expresion . DISTINTO expresion  (66)
	expresion : expresion . MENOR_IGUAL expresion  (67)
	expresion : expresion . MAYOR_IGUAL expresion  (68)
	expresion : expresion . '[' expresion ']'  (71)

	IGUAL  shift 96
	DISTINTO  shift 97
	MAYOR_IGUAL  shift 98
	MENOR_IGUAL  shift 99
	OR  shift 100
	AND  shift 101
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	';'  reduce 36


state 82
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . '*' expresion  (59)
	expresion : expresion . '/' expresion  (60)
	expresion : expresion . '%' expresion  (61)
	expresion : expresion . AND expresion  (62)
	expresion : expresion . OR expresion  (63)
	expresion : '!' expresion .  (64)
	expresion : expresion . IGUAL expresion  (65)
	expresion : expresion . DISTINTO expresion  (66)
	expresion : expresion . MENOR_IGUAL expresion  (67)
	expresion : expresion . MAYOR_IGUAL expresion  (68)
	expresion : expresion . '[' expresion ']'  (71)

	IGUAL  shift 96
	DISTINTO  shift 97
	MAYOR_IGUAL  shift 98
	MENOR_IGUAL  shift 99
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	OR  reduce 64
	AND  reduce 64
	'='  reduce 64
	']'  reduce 64
	')'  reduce 64
	';'  reduce 64
	','  reduce 64


state 83
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . '*' expresion  (59)
	expresion : expresion . '/' expresion  (60)
	expresion : expresion . '%' expresion  (61)
	expresion : expresion . AND expresion  (62)
	expresion : expresion . OR expresion  (63)
	expresion : expresion . IGUAL expresion  (65)
	expresion : expresion . DISTINTO expresion  (66)
	expresion : expresion . MENOR_IGUAL expresion  (67)
	expresion : expresion . MAYOR_IGUAL expresion  (68)
	expresion : '-' expresion .  (69)
	expresion : expresion . '[' expresion ']'  (71)

	'['  shift 108
	IGUAL  reduce 69
	DISTINTO  reduce 69
	MAYOR_IGUAL  reduce 69
	MENOR_IGUAL  reduce 69
	OR  reduce 69
	AND  reduce 69
	'='  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69
	'%'  reduce 69
	']'  reduce 69
	')'  reduce 69
	';'  reduce 69
	','  reduce 69


state 84
	tipo : tipo . '[' CTE_ENTERA ']'  (10)
	expresion : '(' tipo . ')' expresion  (70)

	'['  shift 21
	')'  shift 118
	.  error


state 85
	expresion : expresion . '+' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . '*' expresion  (59)
	expresion : expresion . '/' expresion  (60)
	expresion : expresion . '%' expresion  (61)
	expresion : expresion . AND expresion  (62)
	expresion : expresion . OR expresion  (63)
	expresion : expresion . IGUAL expresion  (65)
	expresion : expresion . DISTINTO expresion  (66)
	expresion : expresion . MENOR_IGUAL expresion  (67)
	expresion : expresion . MAYOR_IGUAL expresion  (68)
	expresion : expresion . '[' expresion ']'  (71)
	expresion : '(' expresion . ')'  (72)

	IGUAL  shift 96
	DISTINTO  shift 97
	MAYOR_IGUAL  shift 98
	MENOR_IGUAL  shift 99
	OR  shift 100
	AND  shift 101
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	')'  shift 119
	.  error


state 86
	sentencias : sentencias . sentencia  (15)
	declaracionFuncion : VOID nombreFuncion '(' ')' '{' declaraciones sentencias . '}'  (45)

	CTE_ENTERA  shift 44
	CTE_CARACTER  shift 45
	CTE_DOBLE  shift 46
	IDENTIFICADOR  shift 12
	IF  shift 47
	WHILE  shift 48
	WRITE  shift 49
	READ  shift 50
	RETURN  shift 51
	'!'  shift 52
	'-'  shift 53
	'('  shift 54
	'}'  shift 120
	.  error
